--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>CJDS Form Submission main</title>
+<title>JDS Events Form Submission</title>
 <style>
   body {
     font-family: sans-serif;
     margin: 20px;
+    background-color: black;
+    color: white;
   }
   .form-container {
-    border: 1px solid #ccc;
+    border: 1px solid #333; /* Darker border for black background */
     padding: 20px;
     margin-bottom: 20px;
   }
@@ -20,12 +22,15 @@
     margin-bottom: 5px;
   }
   .form-container input[type="text"],
-  .form-container textarea {
-    width: calc(100% - 12px); /* Adjust for padding and border */
+  .form-container textarea,
+  .form-container select { /* Added select styling */
+    width: calc(100% - 12px);
     padding: 5px;
     margin-bottom: 10px;
-    border: 1px solid #ddd;
-    box-sizing: border-box; /* Include padding and border in width */
+    border: 1px solid #555; /* Darker input border */
+    background-color: #333; /* Darker input background */
+    color: white; /* White text for contrast */
+    box-sizing: border-box;
   }
   .form-container button {
     padding: 10px 15px;
@@ -33,6 +38,9 @@
     color: white;
     border: none;
     cursor: pointer;
+  }
+  .form-container select{
+    background-color: #333;
   }
 
 </style>
@@ -51,6 +59,13 @@
     <label for="contactMessage">Message:</label>
     <textarea id="contactMessage" name="message" rows="4" required></textarea>
 
+    <label for="contactSubject">Subject:</label>
+    <select id="contactSubject" name="subject">
+        <option value="General Inquiry">General Inquiry</option>
+        <option value="Support">Support</option>
+        <option value="Sales">Sales</option>
+    </select>
+
     <button type="button" onclick="submitForm('contactForm', 'YOUR_WEBHOOK_URL_CONTACT')">Submit</button>
   </form>
 </div>
@@ -66,6 +81,13 @@
 
     <label for="orderAddress">Address:</label>
     <textarea id="orderAddress" name="address" rows="3" required></textarea>
+
+    <label for="orderPayment">Payment Method:</label>
+    <select id="orderPayment" name="payment">
+        <option value="Credit Card">Credit Card</option>
+        <option value="PayPal">PayPal</option>
+        <option value="Bank Transfer">Bank Transfer</option>
+    </select>
 
     <button type="button" onclick="submitForm('orderForm', 'YOUR_WEBHOOK_URL_ORDER')">Submit</button>
   </form>
@@ -90,7 +112,7 @@ function submitForm(formId, webhookUrl) {
   .then(response => {
     if (response.ok) {
       alert('Form submitted successfully!');
-      form.reset(); // Clear the form
+      form.reset();
     } else {
       alert('Form submission failed.');
     }
@@ -104,5 +126,3 @@ function submitForm(formId, webhookUrl) {
 
 </body>
 </html>
-
- 
