--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>JDS Events Form Submission</title>
+<title>Webhook Form Submission</title>
 <style>
   body {
     font-family: sans-serif;
@@ -10,9 +10,15 @@
     color: white;
   }
   .form-container {
-    border: 1px solid #333; /* Darker border for black background */
+    border: 1px solid #333;
     padding: 20px;
     margin-bottom: 20px;
+    width: 30%; /* Use 30% of the screen */
+    float: left; /* Float left to arrange side-by-side */
+    margin-right: 20px; /* Add some space between forms */
+  }
+  .form-container:last-child {
+      margin-right: 0; /*remove right margin from the last element*/
   }
   .form-container h2 {
     margin-top: 0;
@@ -23,13 +29,13 @@
   }
   .form-container input[type="text"],
   .form-container textarea,
-  .form-container select { /* Added select styling */
+  .form-container select {
     width: calc(100% - 12px);
     padding: 5px;
     margin-bottom: 10px;
-    border: 1px solid #555; /* Darker input border */
-    background-color: #333; /* Darker input background */
-    color: white; /* White text for contrast */
+    border: 1px solid #555;
+    background-color: #333;
+    color: white;
     box-sizing: border-box;
   }
   .form-container button {
@@ -39,58 +45,64 @@
     border: none;
     cursor: pointer;
   }
-  .form-container select{
+  .form-container select {
     background-color: #333;
   }
-
+  .clearfix::after { /*clear float*/
+    content: "";
+    clear: both;
+    display: table;
+  }
 </style>
 </head>
 <body>
 
-<div class="form-container">
-  <h2>Contact Form</h2>
-  <form id="contactForm">
-    <label for="contactName">Name:</label>
-    <input type="text" id="contactName" name="name" required>
+<div class="clearfix">
+  <div class="form-container">
+    <h2>Contact Form</h2>
+    <form id="contactForm">
+      <label for="contactName">Name:</label>
+      <input type="text" id="contactName" name="name" required>
 
-    <label for="contactEmail">Email:</label>
-    <input type="text" id="contactEmail" name="email" required>
+      <label for="contactEmail">Email:</label>
+      <input type="text" id="contactEmail" name="email" required>
 
-    <label for="contactMessage">Message:</label>
-    <textarea id="contactMessage" name="message" rows="4" required></textarea>
+      <label for="contactMessage">Message:</label>
+      <textarea id="contactMessage" name="message" rows="4" required></textarea>
 
-    <label for="contactSubject">Subject:</label>
-    <select id="contactSubject" name="subject">
-        <option value="General Inquiry">General Inquiry</option>
-        <option value="Support">Support</option>
-        <option value="Sales">Sales</option>
-    </select>
+      <label for="contactSubject">Subject:</label>
+      <select id="contactSubject" name="subject">
+          <option value="General Inquiry">General Inquiry</option>
+          <option value="Support">Support</option>
+          <option value="Sales">Sales</option>
+      </select>
 
-    <button type="button" onclick="submitForm('contactForm', 'YOUR_WEBHOOK_URL_CONTACT')">Submit</button>
-  </form>
-</div>
+      <button type="button" onclick="submitForm('contactForm', 'YOUR_WEBHOOK_URL_CONTACT')">Submit</button>
+    </form>
+  </div>
 
-<div class="form-container">
-  <h2>Order Form</h2>
-  <form id="orderForm">
-    <label for="orderItem">Item:</label>
-    <input type="text" id="orderItem" name="item" required>
+  <div class="form-container">
+    <h2>Order Form</h2>
+    <form id="orderForm">
+      <label for="orderItem">Item:</label>
+      <input type="text" id="orderItem" name="item" required>
 
-    <label for="orderQuantity">Quantity:</label>
-    <input type="text" id="orderQuantity" name="quantity" required>
+      <label for="orderQuantity">Quantity:</label>
+      <input type="text" id="orderQuantity" name="quantity" required>
 
-    <label for="orderAddress">Address:</label>
-    <textarea id="orderAddress" name="address" rows="3" required></textarea>
+      <label for="orderAddress">Address:</label>
+      <textarea id="orderAddress" name="address" rows="3" required></textarea>
 
-    <label for="orderPayment">Payment Method:</label>
-    <select id="orderPayment" name="payment">
-        <option value="Credit Card">Credit Card</option>
-        <option value="PayPal">PayPal</option>
-        <option value="Bank Transfer">Bank Transfer</option>
-    </select>
+      <label for="orderPayment">Payment Method:</label>
+      <select id="orderPayment" name="payment">
+          <option value="Credit Card">Credit Card</option>
+          <option value="PayPal">PayPal</option>
+          <option value="Bank Transfer">Bank Transfer</option>
+      </select>
 
-    <button type="button" onclick="submitForm('orderForm', 'YOUR_WEBHOOK_URL_ORDER')">Submit</button>
-  </form>
+      <button type="button" onclick="submitForm('orderForm', 'YOUR_WEBHOOK_URL_ORDER')">Submit</button>
+    </form>
+  </div>
 </div>
 
 <script>
@@ -126,3 +138,15 @@ function submitForm(formId, webhookUrl) {
 
 </body>
 </html>
+
+Key Changes:
+ * Width Adjustment:
+   * .form-container { width: 30%; } sets the width of each form container to 30% of the screen width.
+ * Floating Elements:
+   * .form-container { float: left; } makes the form containers float left, which arranges them side-by-side.
+   * margin-right is added to give space between the forms.
+   * margin-right:0 is added to the last form so that it does not have a right margin.
+ * Clearfix:
+   * A .clearfix div is added around the forms to prevent floating elements from causing layout issues.
+   * The .clearfix::after CSS rule ensures that the container properly wraps the floated elements.
+ * Layout: The two forms will now display next to each other, each taking up roughly one third of the browser window.
