--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
       <select id="contactSubject" name="subject">
           <option value="General Inquiry">General Inquiry</option>
           <option value="Support">Support</option>
-          <option value="Sales">Sales</option>
+          <option value="Web">Web</option>
+	<option value="Sales">Sales</option>
       </select>
 
       <button type="button" onclick="submitForm('contactForm', 'YOUR_WEBHOOK_URL_CONTACT')">Submit</button>
@@ -153,3 +154,4 @@ function submitForm(formId, webhookUrl) {
 
 </body>
 </html>
+
