--- a/index.html
+++ b/index.html
@@ -54,15 +54,21 @@
     display: table;
   }
   .image-placeholder {
-    width: 30%; /* Match form width */
+    width: 30%;
     float: left;
-    height: 300px; /* Adjust height as needed */
-    background-color: #222; /* Darker background for placeholder */
+    height: 300px;
+    background-color: #222;
     display: flex;
     justify-content: center;
     align-items: center;
-    color: #888; /* Gray text for placeholder */
+    color: #888;
     border: 1px solid #333;
+  }
+  .image-placeholder img {
+    max-width: 100%; /* Ensure image fits within placeholder */
+    max-height: 100%;
+    object-fit: contain; /* Prevents distortion */
+
   }
 
 </style>
@@ -86,8 +92,7 @@
       <select id="contactSubject" name="subject">
           <option value="General Inquiry">General Inquiry</option>
           <option value="Support">Support</option>
-          <option value="Web">Web</option>
-	<option value="Sales">Sales</option>
+          <option value="Sales">Sales</option>
       </select>
 
       <button type="button" onclick="submitForm('contactForm', 'YOUR_WEBHOOK_URL_CONTACT')">Submit</button>
@@ -117,7 +122,7 @@
     </form>
   </div>
     <div class="image-placeholder">
-        Image Placeholder
+      <img src="YOUR_IMAGE_URL_HERE" alt="Image Placeholder">
     </div>
 </div>
 
@@ -154,4 +159,3 @@ function submitForm(formId, webhookUrl) {
 
 </body>
 </html>
-
