--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     </form>
   </div>
     <div class="image-placeholder">
-      <img src="YOUR_IMAGE_URL_HERE" alt="Image Placeholder">
+      <img src="https://raw.githubusercontent.com/meady35/jds_meady/refs/heads/main/Virtual_Background_2.jpg" alt="Image Placeholder">
     </div>
 </div>
 
