--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <option value="Sales">Sales</option>
             </select>
 
-            <button type="button" onclick="submitForm('contactForm', 'YOUR_WEBHOOK_URL_CONTACT')">Submit</button>
+            <button type="button" onclick="submitForm('contactForm', 'https://hooks.us.webexconnect.io/events/6PU7YN0YTY')">Submit</button>
           </form>
         </div>
 
@@ -110,7 +110,7 @@
                 <option value="Bank Transfer">Bank Transfer</option>
             </select>
 
-            <button type="button" onclick="submitForm('orderForm', 'YOUR_WEBHOOK_URL_ORDER')">Submit</button>
+            <button type="button" onclick="submitForm('orderForm', 'https://hooks.us.webexconnect.io/events/6PU7YN0YTY')">Submit</button>
           </form>
         </div>
     </div>
