--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
                 <option value="General Inquiry">General Inquiry</option>
                 <option value="Support">Support</option>
                 <option value="Sales">Sales</option>
+              <option value="Web">web</option>
             </select>
 
             <button type="button" onclick="submitForm('contactForm', 'https://hooks.us.webexconnect.io/events/6PU7YN0YTY')">Submit</button>
