--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
               <option value="Web">web</option>
             </select>
 
-            <button type="button" onclick="submitForm('contactForm', 'https://hooks.us.webexconnect.io/events/6PU7YN0YTY')">Submit</button>
+            <button type="button" onclick="submitForm('contactForm', https://hooks.us.webexconnect.io/events/B0I4ZT9X4G)">Submit</button>
           </form>
         </div>
 
