--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <label for="contactName">Name:</label>
                 <input type="text" id="contactName" name="name" required>
                 
-                <label for="contactphone">Email:</label>
+                <label for="contactphone">Phone:</label>
                 <input type="text" id="contactPhone" name="phone" required>
 
                 <label for="contactEmail">Email:</label>
