--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@
             <label for="contactName">Name:</label>
             <input type="text" id="contactName" name="name" required>
 
+            <label for="contactPhone">Phone:</label>
+            <input type="text" id="contactPhone" name="phone" required>
+
             <label for="contactEmail">Email:</label>
             <input type="text" id="contactEmail" name="email" required>
 
@@ -88,6 +91,7 @@
                 <option value="General Inquiry">General Inquiry</option>
                 <option value="Support">Support</option>
                 <option value="Sales">Sales</option>
+                <option value="Web">Web</option>
             </select>
 
             <button type="button" onclick="submitForm('contactForm', 'https://hooks.us.webexconnect.io/events/B0I4ZT9X4G')">Submit</button>
